--- a/docs/开发笔记.md
+++ b/docs/开发笔记.md
@@ -12,12 +12,18 @@
 代码写在 log.go 中，测试完毕以后，还需要在 examples/c01_log/main.go 中提供使用示例。
 
 ## 整合环境变量框架
-有一个开源项目，地址是  github.com/yggai/gggo_env 是专门用来读取环境变量的，我需要你整合这个框架，实现基于环境变量的日志配置功能，默认支持如下环境变量：
+有一个开源项目，地址是  github.com/yggai/ygggo_env 是专门用来读取环境变量的，我需要你整合这个框架，实现基于环境变量的日志配置功能，默认支持如下环境变量：
 ```bash
 YGGGO_LOG_LEVEL=DEBUG
 YGGGO_LOG_FILE=log.log
 ```
 
+代码写在 env.go 里面。
+遵循TDD的开发规范。
+
+## 结构化日志
+遵循TDD的开发规范实现新的功能，环境变量支持 YGGGO_LOG_FORMAT=json 可以指定日志的文件格式，json表示生成JSON格式的日志文件。
+代码写在 format.go 文件中。
 
 ## 发布
 概览并总结一下整个Github开源项目，写一个README文档，提供中英文两个版本，可以相互切换。
