单例模式的日志

--- a/docs/开发笔记.md
+++ b/docs/开发笔记.md
@@ -21,9 +21,22 @@ YGGGO_LOG_FILE=log.log
 代码写在 env.go 里面。
 遵循TDD的开发规范。
 
+## 日志对象必须是单例的
+遵循TDD的开发规范实现新的功能，日志对象必须是单例的，代码写在 singleton.go 中。
+无论从代码的任何地方调用 GetLogEnv 方法，得到的日志对象，始终是同一个对象。
+
+
 ## 结构化日志
 遵循TDD的开发规范实现新的功能，环境变量支持 YGGGO_LOG_FORMAT=json 可以指定日志的文件格式，json表示生成JSON格式的日志文件。
 代码写在 format.go 文件中。
+
+## 彩色日志
+遵循TDD的开发规范实现新的功能，美化一下日志的输出，让日志变成好看的彩色日志。
+新增如下两个环境变量的支持：
+- YGGGO_LOG_CONSOLE=true 开启以后，无论是否配置后了文件都要输出到控制台
+- YGGGO_LOG_COLOR=true 开启以后，输出到控制台的日志是漂亮的彩色日志
+
+彩色日志的核心代码写在 color.go 中。
 
 ## 发布
 概览并总结一下整个Github开源项目，写一个README文档，提供中英文两个版本，可以相互切换。
