日志文件大小控制

--- a/docs/开发笔记.md
+++ b/docs/开发笔记.md
@@ -38,7 +38,50 @@ YGGGO_LOG_FILE=log.log
 
 彩色日志的核心代码写在 color.go 中。
 
+
+## 日志文件大小控制
+遵循TDD的开发规范实现新的功能，控制日志文件的大小和文件个数。新增如下环境变量：
+- YGGGO_LOG_FILE_SIZE=100M 日志文件的大小
+- YGGGO_LOG_FILE_NUM=3 日志文件的个数
+
+核心代码写在 size.go 中
+
+## 初始化全局日志
+遵循TDD的开发规范实现新的功能，创建全局的日志方法，这些日志方法可以直接通过如下方式使用：
+```go
+import (
+	gglog "github.com/yggai/ygggo_log"
+)
+
+gglog.Debug
+gglog.Info
+gglog.Warning
+gglog.Error
+gglog.Panic
+```
+
+新增一个 gglog.InitLogEnv 方法，专门用来基于环境变量初始化全局日志。这个方法，会在导入gglog之前自动初始化一次，也可以在项目的其他地方显式调用。
+
+示例代码写在 examples/c06_global/main.go 中
+
+
+## 日志支持参数
+遵循TDD的开发规范实现新的功能，让所有的日志记录方法都支持传入参数。
+比如：gglog.Debug("debug log", a=1, b=1.1, c=True, d=xxx)
+日志参数的key要使用彩色日志高亮显示，不同类型的值最好有不同的颜色
+
+## 约定大于配置
+遵循TDD的开发规范实现新的功能，采用约定大于配置的方式实现：
+- 日志级别默认是 INFO
+- 日志文件默认开启，记录在 logs/日期时间.log，采用JSON日志
+- 控制台日志默认开启，采用彩色日志，记录：日志级别，时间年月日时分秒，文件，代码行，日志信息，日志参数
+- 日志文件大小默认100M
+- 日志文件个数默认3个
+- 默认开启高性能缓冲区+异步写入
+
 ## 发布
+生成LISENCE文件。开源协议使用 PolyForm Noncommercial License 1.0.0  作者是 源滚滚 邮箱是 1156956636@qq.com。本项目是个人研究项目，不接受代码合并，但可以提issue。
+
 概览并总结一下整个Github开源项目，写一个README文档，提供中英文两个版本，可以相互切换。
 
 
