初始化全局日志

--- a/docs/开发笔记.md
+++ b/docs/开发笔记.md
@@ -70,6 +70,8 @@ gglog.Panic
 比如：gglog.Debug("debug log", a=1, b=1.1, c=True, d=xxx)
 日志参数的key要使用彩色日志高亮显示，不同类型的值最好有不同的颜色
 
+示例代码写在 examples/c01_log/main.go 中
+
 ## 约定大于配置
 遵循TDD的开发规范实现新的功能，采用约定大于配置的方式实现：
 - 日志级别默认是 INFO
@@ -78,6 +80,8 @@ gglog.Panic
 - 日志文件大小默认100M
 - 日志文件个数默认3个
 - 默认开启高性能缓冲区+异步写入
+
+示例代码写在 examples/c01_log/main.go 中
 
 ## 发布
 生成LISENCE文件。开源协议使用 PolyForm Noncommercial License 1.0.0  作者是 源滚滚 邮箱是 1156956636@qq.com。本项目是个人研究项目，不接受代码合并，但可以提issue。
