日志支持参数

--- a/docs/开发笔记.md
+++ b/docs/开发笔记.md
@@ -76,7 +76,7 @@ gglog.Panic
 遵循TDD的开发规范实现新的功能，采用约定大于配置的方式实现：
 - 日志级别默认是 INFO
 - 日志文件默认开启，记录在 logs/日期时间.log，采用JSON日志
-- 控制台日志默认开启，采用彩色日志，记录：日志级别，时间年月日时分秒，文件，代码行，日志信息，日志参数
+- 控制台日志默认开启，采用彩色日志，记录：时间年月日时分秒.毫秒，日志级别，文件，代码行，日志信息，日志参数
 - 日志文件大小默认100M
 - 日志文件个数默认3个
 - 默认开启高性能缓冲区+异步写入
