约定大于配置

--- a/docs/开发笔记.md
+++ b/docs/开发笔记.md
@@ -81,7 +81,7 @@ gglog.Panic
 - 日志文件个数默认3个
 - 默认开启高性能缓冲区+异步写入
 
-示例代码写在 examples/c01_log/main.go 中
+示例代码写在 examples/c01_log/main.go 中。这个示例要使用全局日志，越简单越好，越强大越好，因为这个示例是给用户看的第一个示例。
 
 ## 发布
 生成LISENCE文件。开源协议使用 PolyForm Noncommercial License 1.0.0  作者是 源滚滚 邮箱是 1156956636@qq.com。本项目是个人研究项目，不接受代码合并，但可以提issue。
