--- a/docs/开发笔记.md
+++ b/docs/开发笔记.md
@@ -88,6 +88,8 @@ gglog.Panic
 
 概览并总结一下整个Github开源项目，写一个README文档，提供中英文两个版本，可以相互切换。
 
+你作为专业的Go语言高级工程师，补充和完善一下本项目的文档注释，要专业，完善，便于阅读和理解，这是一个开源项目，请你专业一点
+
 
 ```bash
 git tag v1.0.0
